--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,8 +25,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-    - run: yarn install 
-    - run: yarn ci
-    - run: yarn run build --if-present
-    - run: yarn test
+        cache: 'npm'
+    - run: npm install 
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
