--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vite test --transformIgnorePatterns \"node_modules/(?!frontend)/\" --env=jsdom"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
