--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
+    "add": "^2.0.6",
+    "country-state-city": "^3.1.2",
     "framer-motion": "^8.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-hot-toast": "^2.4.0",
     "react-intersection-observer": "^9.4.1",
     "react-media": "^1.10.0",
-    "react-router-dom": "^6.8.0"
+    "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^6.8.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
