--- a/package.json
+++ b/package.json
@@ -37,5 +37,18 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JHorlamide/designstack.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JHorlamide/designstack/issues"
+  },
+  "homepage": "https://github.com/JHorlamide/designstack#readme",
+  "description": ""
 }
