--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "add": "^2.0.6",
+    "axios": "^1.3.4",
     "country-state-city": "^3.1.2",
     "framer-motion": "^8.5.5",
     "react": "^18.2.0",
